--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,5 +57,8 @@ dependencies {
 
     //扩展的tablayout
     implementation 'com.androidkun:XTabLayout:1.1.3'
+    // 图片选择器
+    implementation 'me.iwf.photopicker:PhotoPicker:0.9.0@aar'
+
 
 }
