--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -59,7 +59,8 @@
         <activity android:name=".maincode.mine.view.activity.MineSettingActivity" />
         <activity android:name=".maincode.mine.view.activity.ModificationActivity" />
         <activity android:name=".maincode.mine.view.activity.MyCollectionActivity" />
-        <activity android:name=".maincode.mine.view.activity.MyGuanzhuActivity"></activity>
+        <activity android:name=".maincode.mine.view.activity.MyGuanzhuActivity" />
+        <activity android:name=".maincode.home.view.activity.ClassifShopActivity"></activity>
     </application>
 
 </manifest>
