--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,18 +36,18 @@ dependencies {
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
 
     // retrofit
-    implementation 'com.squareup.retrofit2:retrofit:2.1.0'//Retrofit2所需要的包
-    implementation 'com.squareup.retrofit2:converter-gson:2.1.0'//ConverterFactory的Gson依赖包
-    implementation 'com.squareup.retrofit2:converter-scalars:2.1.0'//ConverterFactory的String依赖包
-    implementation 'com.squareup.retrofit2:adapter-rxjava:2.1.0'//retrofit对rxjava的支持
-    implementation 'com.google.code.gson:gson:+'
-    implementation 'com.squareup.okhttp3:logging-interceptor:+'
+//    implementation 'com.squareup.retrofit2:retrofit:2.1.0'//Retrofit2所需要的包
+//    implementation 'com.squareup.retrofit2:converter-gson:2.1.0'//ConverterFactory的Gson依赖包
+//    implementation 'com.squareup.retrofit2:converter-scalars:2.1.0'//ConverterFactory的String依赖包
+//    implementation 'com.squareup.retrofit2:adapter-rxjava:2.1.0'//retrofit对rxjava的支持
+//    implementation 'com.google.code.gson:gson:+'
+//    implementation 'com.squareup.okhttp3:logging-interceptor:+'
 
     // RxJava
-    implementation 'io.reactivex:rxjava:+'
-    implementation 'io.reactivex:rxandroid:+'
-    implementation 'com.trello:rxlifecycle:1.0'
-    implementation 'com.trello:rxlifecycle-components:1.0'
+//    implementation 'io.reactivex:rxjava:+'
+//    implementation 'io.reactivex:rxandroid:+'
+//    implementation 'com.trello:rxlifecycle:1.0'
+//    implementation 'com.trello:rxlifecycle-components:1.0'
 
     // Glide图片加载库
     implementation 'com.github.bumptech.glide:glide:+'
@@ -59,6 +59,10 @@ dependencies {
     implementation 'com.androidkun:XTabLayout:1.1.3'
     // 图片选择器
     implementation 'me.iwf.photopicker:PhotoPicker:0.9.0@aar'
+
+    //对于retrofit+rxjava封装的网络请求
+    implementation 'com.tamic.novate:novate:1.5.2.3'
+
 
 
 }
