--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,7 +46,8 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".maincode.home.view.activity.HomeSearchActivity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateHidden" />
         <activity
             android:name=".login.view.activity.LoginActivity"
             android:screenOrientation="portrait" />
@@ -60,21 +61,52 @@
             android:name=".maincode.mine.view.activity.MineApplyEnterActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateHidden" />
-        <activity android:name=".maincode.mine.view.activity.MineSettingActivity" />
-        <activity android:name=".maincode.mine.view.activity.ModificationActivity" />
-        <activity android:name=".maincode.mine.view.activity.MyCollectionActivity" />
-        <activity android:name=".maincode.mine.view.activity.MyGuanzhuActivity" />
-        <activity android:name=".maincode.home.view.activity.ClassifShopActivity" />
-        <activity android:name=".maincode.home.view.activity.ProductdetailsActivity" />
-        <activity android:name=".maincode.mine.view.activity.FootPrintActivity" />
-        <activity android:name=".maincode.mine.view.activity.MyOrderAllActivity" />
-        <activity android:name=".maincode.mine.view.activity.PingLunActivity" />
-        <activity android:name=".maincode.mine.view.activity.AddressManagementActivity" />
-        <activity android:name=".maincode.mine.view.activity.AddressDetailActivity" />
-        <activity android:name=".maincode.mine.view.activity.AboutActivity" />
-        <activity android:name=".maincode.mine.view.activity.WebViewActivity" />
-        <activity android:name=".maincode.home.view.activity.DaiBanMoreActivity" />
-        <activity android:name=".maincode.home.view.activity.DaiBanDetailsActivity"></activity>
+        <activity
+            android:name=".maincode.mine.view.activity.MineSettingActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".maincode.mine.view.activity.ModificationActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".maincode.mine.view.activity.MyCollectionActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".maincode.mine.view.activity.MyGuanzhuActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".maincode.home.view.activity.ClassifShopActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".maincode.home.view.activity.ProductdetailsActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".maincode.mine.view.activity.FootPrintActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".maincode.mine.view.activity.MyOrderAllActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".maincode.mine.view.activity.PingLunActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".maincode.mine.view.activity.AddressManagementActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".maincode.mine.view.activity.AddressDetailActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".maincode.mine.view.activity.AboutActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".maincode.mine.view.activity.WebViewActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".maincode.home.view.activity.DaiBanMoreActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".maincode.home.view.activity.DaiBanDetailsActivity"
+            android:screenOrientation="portrait" />
+
     </application>
 
 </manifest>
