--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,11 +3,12 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 26
     defaultConfig {
-        applicationId "com.example.administrator.localrun"
+        applicationId "com.xingguang.localrun"
         minSdkVersion 15
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -16,41 +17,35 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    packagingOptions {
+        exclude 'META-INF/rxjava.properties'
+    }
+
 }
 
+//repositories {
+//    flatDir {
+//        dirs 'libs' //就是你放aar的目录地址
+//    }
+//}
+
 dependencies {
+
+//    androidTestImplementation('com.android.support.test.espresso:espresso-core:3.0.1', {
+//        exclude group: 'com.android.support', module: 'support-annotations'
+//    })
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.1'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 
-    //5.0控件
-    implementation 'com.android.support:appcompat-v7:26.+'
-    implementation 'com.android.support:design:26.+'
-    implementation 'com.android.support:recyclerview-v7:26.+'
-    implementation 'com.android.support:cardview-v7:26.+'
-
-    // butterKnife
     implementation 'com.jakewharton:butterknife:8.4.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
 
-    // retrofit
-//    implementation 'com.squareup.retrofit2:retrofit:2.1.0'//Retrofit2所需要的包
-//    implementation 'com.squareup.retrofit2:converter-gson:2.1.0'//ConverterFactory的Gson依赖包
-//    implementation 'com.squareup.retrofit2:converter-scalars:2.1.0'//ConverterFactory的String依赖包
-//    implementation 'com.squareup.retrofit2:adapter-rxjava:2.1.0'//retrofit对rxjava的支持
-//    implementation 'com.google.code.gson:gson:+'
-//    implementation 'com.squareup.okhttp3:logging-interceptor:+'
-
-    // RxJava
-//    implementation 'io.reactivex:rxjava:+'
-//    implementation 'io.reactivex:rxandroid:+'
-//    implementation 'com.trello:rxlifecycle:1.0'
-//    implementation 'com.trello:rxlifecycle-components:1.0'
-
-    // Glide图片加载库
-    implementation 'com.github.bumptech.glide:glide:+'
+    //5.0控件
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.android.support:appcompat-v7:26.+'
+    implementation 'com.android.support:design:26.+'
+    implementation 'com.android.support:cardview-v7:26.+'
 
     //banner
     implementation 'com.youth.banner:banner:1.4.10'
@@ -60,11 +55,11 @@ dependencies {
     // 图片选择器
     implementation 'me.iwf.photopicker:PhotoPicker:0.9.0@aar'
 
-    //对于retrofit+rxjava封装的网络请求
-    implementation 'com.tamic.novate:novate:1.5.2.3'
-
     // 城市选择
     implementation 'liji.library.dev:citypickerview:0.9.0'
 
+    implementation project(':core')
+
+    implementation 'com.android.support:multidex:1.0.0'
 
 }
