--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,35 +31,26 @@ android {
 //}
 
 dependencies {
-
-//    androidTestImplementation('com.android.support.test.espresso:espresso-core:3.0.1', {
-//        exclude group: 'com.android.support', module: 'support-annotations'
-//    })
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    //    androidTestImplementation('com.android.support.test.espresso:espresso-core:3.0.1', {
+    //        exclude group: 'com.android.support', module: 'support-annotations'
+    //    })
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     testImplementation 'junit:junit:4.12'
-
     implementation 'com.jakewharton:butterknife:8.4.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
-
     //5.0控件
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation 'com.android.support:appcompat-v7:26.+'
     implementation 'com.android.support:design:26.+'
     implementation 'com.android.support:cardview-v7:26.+'
-
     //banner
     implementation 'com.youth.banner:banner:1.4.10'
-
     //扩展的tablayout
     implementation 'com.androidkun:XTabLayout:1.1.3'
     // 图片选择器
     implementation 'me.iwf.photopicker:PhotoPicker:0.9.0@aar'
-
     // 城市选择
     implementation 'liji.library.dev:citypickerview:0.9.0'
-
     implementation project(':core')
-
     implementation 'com.android.support:multidex:1.0.0'
-
 }
