--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,11 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 26
+    compileSdkVersion 27
+    buildToolsVersion '27.0.3'
     defaultConfig {
         applicationId "com.xingguang.localrun"
-        minSdkVersion 15
-        targetSdkVersion 26
+        minSdkVersion 19
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
         multiDexEnabled true
@@ -18,29 +19,48 @@ android {
         }
     }
 
+    buildscript {
+        repositories {
+            jcenter()
+        }
+    }
+
+    allprojects {
+        repositories {
+            maven { url 'https://jitpack.io' }
+            jcenter()
+        }
+    }
+    sourceSets {
+        main {
+            jniLibs.srcDirs = ['libs']
+        }
+    }
+
     packagingOptions {
         exclude 'META-INF/rxjava.properties'
     }
 
 }
 
-//repositories {
-//    flatDir {
-//        dirs 'libs' //就是你放aar的目录地址
-//    }
-//}
+repositories {
+    flatDir {
+        dirs 'libs' //就是你放aar的目录地址
+    }
+}
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     testImplementation 'junit:junit:4.12'
     //butterknife
-    implementation 'com.jakewharton:butterknife:8.4.0'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
+    implementation 'com.jakewharton:butterknife:8.6.0'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.6.0'
     //5.0控件
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:26.+'
-    implementation 'com.android.support:design:26.+'
-    implementation 'com.android.support:cardview-v7:26.+'
+    implementation 'com.android.support:design:27.+'
+    implementation 'com.android.support:cardview-v7:27.+'
     //banner
     implementation 'com.youth.banner:banner:1.4.10'
     //扩展的tablayout
@@ -58,6 +78,18 @@ dependencies {
     implementation 'com.nineoldandroids:library:2.4.0'
     // refreshLayout
     implementation 'com.lcodecorex:tkrefreshlayout:1.0.5'
+    //3D滚轮效果的选择器
+    implementation 'com.contrarywind:Android-PickerView:4.1.3'
+
+    //微信支付
+    implementation 'com.tencent.mm.opensdk:wechat-sdk-android-without-mta:+'
+
+    implementation 'com.lzy.net:okgo:3.0.4'
+
+    //以下三个选择添加，okrx和okrx2不能同时使用
+    implementation 'com.lzy.net:okrx2:2.0.2'
+    implementation 'com.readystatesoftware.chuck:library:1.0.4'
+
     //友盟
     implementation files('libs/umeng-common-1.5.3.jar')
     implementation files('libs/umeng-share-core-6.9.2.jar')
@@ -66,4 +98,15 @@ dependencies {
     implementation files('libs/umeng-share-wechat-simplify-6.9.2.jar')
     implementation files('libs/umeng-shareboard-widget-6.9.2.jar')
     implementation files('libs/umeng-sharetool-6.9.2.jar')
+}
+
+configurations.all {
+    resolutionStrategy.eachDependency { DependencyResolveDetails details ->
+        def requested = details.requested
+        if (requested.group == 'com.android.support') {
+            if (!requested.name.startsWith("multidex")) {
+                details.useVersion '26.+'
+            }
+        }
+    }
 }
