--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ buildscript {
     
     repositories {
         jcenter()
+        google()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.1'
@@ -21,6 +22,7 @@ allprojects {
         maven {
             url "https://jitpack.io"
         }
+        google()
     }
 }
 
