--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,10 +12,25 @@ android {
         multiDexEnabled true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
+
+
+    signingConfigs {
+        release {
+            storeFile file('D:\\keystore\\LocalRun\\localrun.jks')
+            storePassword '123456'
+            keyAlias 'LocalRun'
+            keyPassword '123456'
+        }
+    }
+
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+        debug {
+            signingConfig signingConfigs.release
         }
     }
 
@@ -57,7 +72,6 @@ dependencies {
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.6.0'
     //5.0控件
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-
     implementation 'com.android.support:appcompat-v7:27.+'
     implementation 'com.android.support:design:27.+'
     implementation 'com.android.support:cardview-v7:27.+'
@@ -80,18 +94,13 @@ dependencies {
     implementation 'com.lcodecorex:tkrefreshlayout:1.0.5'
     //3D滚轮效果的选择器
     implementation 'com.contrarywind:Android-PickerView:4.1.3'
-
     //微信支付
     implementation 'com.tencent.mm.opensdk:wechat-sdk-android-without-mta:+'
-
     implementation 'com.lzy.net:okgo:3.0.4'
-
     //以下三个选择添加，okrx和okrx2不能同时使用
     implementation 'com.lzy.net:okrx2:2.0.2'
     implementation 'com.readystatesoftware.chuck:library:1.0.4'
-
     implementation 'org.greenrobot:eventbus:3.0.0'
-
     //友盟
     implementation files('libs/umeng-common-1.5.3.jar')
     implementation files('libs/umeng-share-core-6.9.2.jar')
@@ -100,6 +109,7 @@ dependencies {
     implementation files('libs/umeng-share-wechat-simplify-6.9.2.jar')
     implementation files('libs/umeng-shareboard-widget-6.9.2.jar')
     implementation files('libs/umeng-sharetool-6.9.2.jar')
+    implementation files('libs/alipaySdk-20180601.jar')
 }
 
 configurations.all {
