--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,6 +11,16 @@ android {
         versionName "1.0"
         multiDexEnabled true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        manifestPlaceholders = [
+                GETUI_APP_ID    : "prEuruddx071bf5lNLGAk2",
+                GETUI_APP_KEY   : "3CKbugdY9LANXEMj6ENFQ5",
+                GETUI_APP_SECRET: "iBcLtgIdQbAMoTcwyzV3M"
+        ]
+
+        ndk {
+            abiFilters "armeabi", "armeabi-v7a", "x86_64", "arm64-v8a", "mips", "mips64", "x86"
+        }
+
     }
 
 
@@ -110,6 +120,10 @@ dependencies {
     implementation files('libs/umeng-shareboard-widget-6.9.2.jar')
     implementation files('libs/umeng-sharetool-6.9.2.jar')
     implementation files('libs/alipaySdk-20180601.jar')
+
+    // 个推
+    implementation 'com.getui:sdk:2.11.1.0'
+
 }
 
 configurations.all {
