--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,9 +12,9 @@ android {
         multiDexEnabled true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         manifestPlaceholders = [
-                GETUI_APP_ID    : "prEuruddx071bf5lNLGAk2",
-                GETUI_APP_KEY   : "3CKbugdY9LANXEMj6ENFQ5",
-                GETUI_APP_SECRET: "iBcLtgIdQbAMoTcwyzV3M"
+                GETUI_APP_ID    : "gZpysabAjSAOmnb4mu2ub3",
+                GETUI_APP_KEY   : "0lm2BwlixVAWiSOizOHGr7",
+                GETUI_APP_SECRET: "L9CS4HrQx1AHDh68y0VWO4"
         ]
 
         ndk {
@@ -101,7 +101,7 @@ dependencies {
     implementation 'com.eftimoff:androidplayer:1.0.3@aar'
     implementation 'com.nineoldandroids:library:2.4.0'
     // refreshLayout
-    implementation 'com.lcodecorex:tkrefreshlayout:1.0.5'
+    implementation 'com.lcodecorex:tkrefreshlayout:1.0.7'
     //3D滚轮效果的选择器
     implementation 'com.contrarywind:Android-PickerView:4.1.3'
     //微信支付
