--- a/app/build.gradle
+++ b/app/build.gradle
@@ -124,6 +124,9 @@ dependencies {
     // 个推
     implementation 'com.getui:sdk:2.11.1.0'
 
+    //加载dialog
+    implementation 'com.wang.avi:library:2.1.3'
+
 }
 
 configurations.all {
