--- a/core/build.gradle
+++ b/core/build.gradle
@@ -49,7 +49,7 @@ dependencies {
     api 'com.trello.rxlifecycle2:rxlifecycle-components:2.2.1'
 
     // Glide图片加载库
-    api 'com.github.bumptech.glide:glide:+'
+    api 'com.github.bumptech.glide:glide:3.7.0'
 
     // 友盟统计
     api 'com.umeng.analytics:analytics:latest.integration'
