--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,16 @@
         android:theme="@style/AppTheme"
         tools:replace="android:name">
 
+        <provider
+            android:name=".view.Filep"
+            android:authorities="com.xingguang.localrun.fileProvider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths" />
+        </provider>
+
         <!-- 推送 -->
         <service
             android:name=".push.PushService"
