--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,7 +35,7 @@
 
         <provider
             android:name=".view.Filep"
-            android:authorities="com.xingguang.localrun.fileProvider"
+            android:authorities="${applicationId}.provider"
             android:exported="false"
             android:grantUriPermissions="true">
             <meta-data
@@ -155,7 +155,9 @@
             android:name=".main.view.MainActivity"
             android:screenOrientation="portrait">
             <!--适配刘海屏-->
-            <meta-data android:name="android.notch_support" android:value="true"/>
+            <meta-data
+                android:name="android.notch_support"
+                android:value="true" />
         </activity>
         <activity
             android:name=".maincode.home.view.activity.LookShopActivity"
@@ -226,7 +228,9 @@
             android:name=".maincode.home.view.activity.BuyActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateHidden" />
-        <activity android:name=".login.view.activity.OtherLoginActivity"></activity>
+        <activity
+            android:name=".login.view.activity.OtherLoginActivity"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
